// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds profile views fetches multiple profiles 1`] = `
Array [
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "creator": "user(0)",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "description": "its me!",
    "did": "user(0)",
    "displayName": "ali",
    "followersCount": 2,
    "followsCount": 3,
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {
      "follow": "record(0)",
    },
    "postsCount": 4,
    "viewer": Object {
      "followedBy": "record(1)",
      "following": "record(0)",
    },
  },
  Object {
    "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "creator": "user(1)",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "description": "hi im bob",
    "did": "user(1)",
    "displayName": "bobby",
    "followersCount": 2,
    "followsCount": 2,
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "myState": Object {},
    "postsCount": 3,
    "viewer": Object {},
  },
  Object {
    "creator": "user(2)",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(2)",
    "followersCount": 2,
    "followsCount": 1,
    "handle": "carol.test",
    "myState": Object {
      "follow": "record(2)",
    },
    "postsCount": 2,
    "viewer": Object {
      "following": "record(2)",
    },
  },
  Object {
    "creator": "user(3)",
    "declaration": Object {
      "actorType": "",
      "cid": "",
    },
    "did": "user(3)",
    "followersCount": 1,
    "followsCount": 1,
    "handle": "dan.test",
    "myState": Object {},
    "postsCount": 2,
    "viewer": Object {
      "followedBy": "record(3)",
    },
  },
]
`;

exports[`pds profile views fetches other's profile, with a follow 1`] = `
Object {
  "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "",
    "cid": "",
  },
  "description": "its me!",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {
    "follow": "record(0)",
  },
  "postsCount": 4,
  "viewer": Object {
    "followedBy": "record(1)",
    "following": "record(0)",
  },
}
`;

exports[`pds profile views fetches other's profile, without a follow 1`] = `
Object {
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "",
    "cid": "",
  },
  "did": "user(0)",
  "followersCount": 1,
  "followsCount": 1,
  "handle": "dan.test",
  "myState": Object {},
  "postsCount": 2,
  "viewer": Object {
    "followedBy": "record(0)",
  },
}
`;

exports[`pds profile views fetches own profile 1`] = `
Object {
  "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "",
    "cid": "",
  },
  "description": "its me!",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {},
  "postsCount": 4,
  "viewer": Object {},
}
`;

exports[`pds profile views presents avatars & banners 1`] = `
Object {
  "avatar": "https://bsky.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
  "banner": "https://bsky.public.url/image/ejOTK5gy9tlarOXM6MhrPOs0C18LFpfd9qQ9lBrcIBE/rs:fill:3000:1000:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
  "creator": "user(0)",
  "declaration": Object {
    "actorType": "",
    "cid": "",
  },
  "description": "its me!",
  "did": "user(0)",
  "displayName": "ali",
  "followersCount": 2,
  "followsCount": 3,
  "handle": "alice.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "myState": Object {},
  "postsCount": 4,
  "viewer": Object {},
}
`;
